apps/harbor/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor
spec:
  parentRefs:
    - name: eg
      sectionName: https
      namespace: gateway
  hostnames:
    - harbor.homie.e10n.me
  rules:
    - backendRefs:
        - name: harbor-core
          namespace: harbor
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /api/
        - path:
            type: PathPrefix
            value: /service/
        - path:
            type: PathPrefix
            value: /v2/
        - path:
            type: PathPrefix
            value: /c/
    - backendRefs:
        - name: harbor-portal
          namespace: harbor
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
